@@ -4,7 +4,7 @@ import preponderous.ponder.system.abs.AbstractCommand;
 import preponderous.ponder.system.abs.AbstractCommandSender;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Daniel Stephenson
@@ -13,16 +13,17 @@ import java.util.Arrays;
 public class HelpCommand extends AbstractCommand {
 
     public HelpCommand() {
-        super(new ArrayList<>(Arrays.asList("help")), new ArrayList<>(Arrays.asList("interakt.help")));
+        super(new ArrayList<>(List.of("help")), new ArrayList<>(List.of("interakt.help")));
     }
 
     @Override
     public boolean execute(AbstractCommandSender sender) {
         sender.sendMessage("=== Example Ponder Application Commands ===");
         sender.sendMessage("help - View a list of useful commands.");
+        sender.sendMessage("list - List entities and environments.");
+        sender.sendMessage("view - View an entity or environment.");
         sender.sendMessage("create - Create an entity or environment.");
         sender.sendMessage("delete - Delete an entity or environment.");
-        sender.sendMessage("view - View an entity or environment.");
         sender.sendMessage("info - View information about the application.");
         sender.sendMessage("quit - Quit the application.");
         return true;
